--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "dependencies": {
+    "fake-useragent": "^1.0.1",
     "hono": "^4.2.3"
   },
   "devDependencies": {
